fix scrollbar appearing in currency selectors

--- a/src/components/Trade/Limit/LimitCurrencySelector/LimitCurrencySelector.module.css
+++ b/src/components/Trade/Limit/LimitCurrencySelector/LimitCurrencySelector.module.css
@@ -1,7 +1,7 @@
 /* swapbox */
 .swapbox {
     display: flex;
-    overflow: auto;
+    overflow: hidden;
     flex-direction: column;
     overflow-y: hidden;
     padding: 5px;
